[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Art/Gunman.png" type="Texture" id=1]
[ext_resource path="res://Characters/Danger Zone.gd" type="Script" id=2]
[ext_resource path="res://Characters/Gunman.gd" type="Script" id=3]
[ext_resource path="res://Game_Systems/SE_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/SoundEffects/Bang2.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=10]
radius = 8.0
height = 8.0

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
} ]

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( -2, 15, 0, 11, 3, 15, 8, 16, 8, 9, 8, 2, 12, 8, 14, 8, 14, 2, 7, -1, 7, -6, 12, -8, 12, -13, 8, -9, 4, -14, -4, -14, -6, -10, -13, -12, -15, -9, -6, -5, -6, 0, -11, 0, -13, 8, -10, 8, -7, 2, -6, 9, -7, 15 )

[sub_resource type="CircleShape2D" id=12]
radius = 30.2655

[node name="Gunman" type="KinematicBody2D"]
script = ExtResource( 3 )
SE_gunshot = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Idle"
frame = 7
playing = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2( 0, 1 )
occluder = SubResource( 11 )

[node name="Danger Zone" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Danger Zone"]
shape = SubResource( 12 )

[node name="SE_player" parent="." instance=ExtResource( 4 )]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="danger_zone_clicked" from="Danger Zone" to="." method="_on_Danger_Zone_danger_zone_clicked"]
